// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ActionList /> > renders a simple ActionList 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col overflow-hidden rounded-level-1 bg-surface py-2 shadow-md data-[state=closed]:animate-dropdown-close data-[state=open]:animate-dropdown-open max-w-max"
      >
        <div
          class="relative px-2"
        >
          <button
            class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
            id="sort-asc"
          >
            <span
              class="flex gap-4"
            >
              <span
                class="flex flex-col items-start text-sm font-normal"
              >
                Sort ascending
              </span>
            </span>
          </button>
        </div>
        <div
          class="relative px-2"
        >
          <button
            class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
            id="sort-desc"
          >
            <span
              class="flex gap-4"
            >
              <span
                class="flex flex-col items-start text-sm font-normal"
              >
                Sort descending
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col overflow-hidden rounded-level-1 bg-surface py-2 shadow-md data-[state=closed]:animate-dropdown-close data-[state=open]:animate-dropdown-open max-w-max"
    >
      <div
        class="relative px-2"
      >
        <button
          class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
          id="sort-asc"
        >
          <span
            class="flex gap-4"
          >
            <span
              class="flex flex-col items-start text-sm font-normal"
            >
              Sort ascending
            </span>
          </span>
        </button>
      </div>
      <div
        class="relative px-2"
      >
        <button
          class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
          id="sort-desc"
        >
          <span
            class="flex gap-4"
          >
            <span
              class="flex flex-col items-start text-sm font-normal"
            >
              Sort descending
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ActionList /> > renders an ActionList as a dropdown 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="uikit-theme"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          Open
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      id="uikit-theme"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        data-state="closed"
        id="radix-:r0:"
        type="button"
      >
        Open
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ActionList /> > renders an ActionList with sections 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col overflow-hidden rounded-level-1 bg-surface py-2 shadow-md data-[state=closed]:animate-dropdown-close data-[state=open]:animate-dropdown-open max-w-max"
      >
        <div
          class="group divide-y"
        >
          <div
            class="group/section-item [&:not(:first-child)]:mt-1"
          >
            <p
              class="mx-4 mt-1 pb-2 pt-4 text-xs font-semibold group-first/section-item:pt-1"
            >
              Sort options
            </p>
            <div
              class="relative px-2"
            >
              <button
                class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
                id="sort-asc"
              >
                <span
                  class="flex gap-4"
                >
                  <span
                    class="flex flex-col items-start text-sm font-normal"
                  >
                    Sort ascending
                  </span>
                </span>
              </button>
            </div>
            <div
              class="relative px-2"
            >
              <button
                class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
                id="sort-desc"
              >
                <span
                  class="flex gap-4"
                >
                  <span
                    class="flex flex-col items-start text-sm font-normal"
                  >
                    Sort descending
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="group/section-item [&:not(:first-child)]:mt-1"
          >
            <p
              class="mx-4 mt-1 pb-2 pt-4 text-xs font-semibold group-first/section-item:pt-1"
            >
              Bulk options
            </p>
            <div
              class="relative px-2"
            >
              <button
                class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
                id="edit"
              >
                <span
                  class="flex gap-4"
                >
                  <span
                    class="flex flex-col items-start text-sm font-normal"
                  >
                    Edit
                  </span>
                </span>
              </button>
            </div>
            <div
              class="relative px-2"
            >
              <button
                class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
                id="remove"
              >
                <span
                  class="flex gap-4"
                >
                  <span
                    class="flex flex-col items-start text-sm font-normal"
                  >
                    Sort descending
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col overflow-hidden rounded-level-1 bg-surface py-2 shadow-md data-[state=closed]:animate-dropdown-close data-[state=open]:animate-dropdown-open max-w-max"
    >
      <div
        class="group divide-y"
      >
        <div
          class="group/section-item [&:not(:first-child)]:mt-1"
        >
          <p
            class="mx-4 mt-1 pb-2 pt-4 text-xs font-semibold group-first/section-item:pt-1"
          >
            Sort options
          </p>
          <div
            class="relative px-2"
          >
            <button
              class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
              id="sort-asc"
            >
              <span
                class="flex gap-4"
              >
                <span
                  class="flex flex-col items-start text-sm font-normal"
                >
                  Sort ascending
                </span>
              </span>
            </button>
          </div>
          <div
            class="relative px-2"
          >
            <button
              class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
              id="sort-desc"
            >
              <span
                class="flex gap-4"
              >
                <span
                  class="flex flex-col items-start text-sm font-normal"
                >
                  Sort descending
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="group/section-item [&:not(:first-child)]:mt-1"
        >
          <p
            class="mx-4 mt-1 pb-2 pt-4 text-xs font-semibold group-first/section-item:pt-1"
          >
            Bulk options
          </p>
          <div
            class="relative px-2"
          >
            <button
              class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
              id="edit"
            >
              <span
                class="flex gap-4"
              >
                <span
                  class="flex flex-col items-start text-sm font-normal"
                >
                  Edit
                </span>
              </span>
            </button>
          </div>
          <div
            class="relative px-2"
          >
            <button
              class="flex group w-full gap-4 rounded-lg px-2 py-2.5 focus-visible:outline focus-visible:outline-1 focus-visible:outline-focus focus-visible:ring-1 focus-visible:ring-focus focus-visible:ring-offset-1 disabled:text-disabled justify-between relative focus-visible:z-10 hover:z-10 text enabled:hover:bg-surface-hovered enabled:active:bg-surface-pressed items-center"
              id="remove"
            >
              <span
                class="flex gap-4"
              >
                <span
                  class="flex flex-col items-start text-sm font-normal"
                >
                  Sort descending
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
